fix: Remove inaccessible contrast-level color in favor of working, accessible image metadata color

--- a/blocks/lead-art-block/features/leadart/leadart.scss
+++ b/blocks/lead-art-block/features/leadart/leadart.scss
@@ -12,7 +12,6 @@
 		margin-top: map-get($spacers, "xs");
 
 		p.image-metadata {
-			color: $image-caption-rule-color;
 			font-size: calculateRem(14px);
 			line-height: calculateRem(24px);
 			margin: 8px 0;
